[gd_scene load_steps=3 format=3 uid="uid://dfhl6k0oq6mkj"]

[ext_resource type="Script" path="res://Scenes/MenuSettings/menu_settings.gd" id="1_kexyc"]
[ext_resource type="FontFile" uid="uid://dpij2clfuqdep" path="res://Assets/Font/Arvo-Regular.ttf" id="2_vim4q"]

[node name="MenuSettings" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_kexyc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 806.0
offset_top = -166.0
offset_right = 1106.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CenterContainer3" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_vim4q")
theme_override_font_sizes/font_size = 25
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CenterContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="MusicVolSlider" type="HSlider" parent="VBoxContainer/CenterContainer3/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.001

[node name="CenterContainer5" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer5"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer5/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_vim4q")
theme_override_font_sizes/font_size = 25
text = "SFX Volume"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CenterContainer5/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="SFXVolSlider" type="HSlider" parent="VBoxContainer/CenterContainer5/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.001

[node name="CenterContainer4" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_vim4q")
theme_override_font_sizes/font_size = 25
text = "Game Speed: 100%"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CenterContainer4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="GameSpeedSlider" type="HSlider" parent="VBoxContainer/CenterContainer4/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
min_value = 50.0
max_value = 250.0
step = 50.0
value = 100.0

[connection signal="value_changed" from="VBoxContainer/CenterContainer3/VBoxContainer/MarginContainer/MusicVolSlider" to="." method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/CenterContainer5/VBoxContainer/MarginContainer/SFXVolSlider" to="." method="_on_sfx_vol_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/CenterContainer4/VBoxContainer/MarginContainer/GameSpeedSlider" to="." method="_on_game_speed_slider_value_changed"]
